using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Anim_Tags 
{
    public const string GirlEnemyTurnForwerd_Trigger = "Turn Forwerd";
    public const string GirlEnemyTurnBack_Trigger = "Turn Back";

    public const string PLAYERS_RUNNING = "Running";
    public const string PLAYERS_WALKING = "Walking";
    public const string PLAYERS_VECTORY = "Vectory";
    public const string PLAYER_BROKECANDY = "BrokeCandy";

    public const string SOLDIER_FIRE = "Fire";





    public const string FADE_OUT= "FadeOut";
    public const string FADE_IN= "FadeIn";
}

public class Tags
{


    public const string PLAYERS = "Players";
    public const string PLAYERS_DEAD = "PlayersDead";
    
    public const string WINLINE = "WinLine";
    public const string STARTLINE = "StartLine";
    
    public const string SOLDIERS = "Soldiers";

    public const string PLAYER_HIPS = "PlayerHips";

    public const string FALLLINE  = "FallLine";

    public const string GROUND = "Ground";

    public const string GLASS_WINDOW= "GlassWindow";



}


public class Names
{
    public const string MY_PLAYER = "MyPlayer";
}

public class ScenesNames
{
    public const string MAIN = "main";
    public const string LVL1 = "lvl1";
    public const string LVL2 = "lvl2";
    public const string LVL3 = "lvl3";
    public const string LVL4 = "lvl4";
    public const string LVL5 = "lvl5";
    public const string LVL6 = "lvl6";


    public const string LVL1_TIMELINE = "lvl1_timeLine";
    public const string LVL2_TIMELINE = "lvl2_timeLine";
    public const string LVL3_TIMELINE = "lvl3_timeLine";
    public const string LVL4_TIMELINE = "lvl4_timeLine";
    public const string LVL5_TIMELINE = "lvl5_timeLine";
    public const string LVL6_TIMELINE = "lvl6_timeLine";

}